initialize quarto book.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: book
 
 book:
-  title: "Il pleut à l'Assemblée"
+  title: "La météo des élections"
   
   author: 
     - name: "Carole Doucerain"
