--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,10 @@ License: GPL (>= 2)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Imports:
+    here,
+    utils, 
+    sf, 
+    rnaturalearth
+Depends: 
+    ggplot2
