Salvation: all modifs from dev_eti without the 10Go file.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,9 +21,9 @@ Imports:
     utils, 
     sf, 
     rnaturalearth,
-    dplyr,
-    stringr,
     exactextractr,
-    raster
+    raster,
+    dplyr,
+    stringr
 Depends: 
     ggplot2
