correct faute henry

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ book:
     - name: "Carole Doucerain"
     - name: "Léo Streith"
     - name: "Alycia Frochot"
-    - name: "Etienne Henri"
+    - name: "Etienne Henry"
       
   date: today
   description:  |
