--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,6 +27,8 @@ book:
   
   chapters:
     - index.qmd
+    - chapters/chapter_1__agregate_wheather_vote.qmd
+    - chapters/chapter_2__abstention_rain.qmd
     
 format:
   html:
